After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 621836 - "disable touchpad while typing" doesn't work when typing slowly
"disable touchpad while typing" doesn't work when typing slowly
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: mouse
2.30.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
: 672423 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2010-06-16 23:04 UTC by Koichi Akabe
Modified: 2012-05-23 17:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Added setting to configure amount of time touchpad is disabled after typing (5.23 KB, patch)
2011-05-29 15:45 UTC, Snowball
none Details | Review

Description Koichi Akabe 2010-06-16 23:04:57 UTC
I checked "Disable touchpad while typing" in the Mouse Preferences, but its disabling time is too short, so it is not useful when typing slowly.

Please add a slider (or another instead) to change disabling time.
Comment 1 Bastien Nocera 2010-12-07 18:28:33 UTC
We're not going to add a slider, but the default value of 0.5 seconds was definitely too low. I've changed it to use 2 seconds, which is the default used by syndaemon.
Comment 2 Bastien Nocera 2010-12-07 18:28:41 UTC
commit 3de30a7a14db5c3cdd88ead2e51a7f24cb071377
Author: Bastien Nocera <hadess@hadess.net>
Date:   Tue Dec 7 18:23:25 2010 +0000

    mouse: Disable touchpad for longer
    
    The default is 2 seconds, so when disabling the touchpad while typing
    we should probably disable it for 2 seconds unless there's a very good
    reason not to use that value.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=621836
Comment 3 Snowball 2011-05-29 15:45:01 UTC
Created attachment 188848 [details] [review]
Added setting to configure amount of time touchpad is disabled after typing

I found my touchpad difficult to use with the delay set at 2 seconds, so I added a GSettings setting (org.gnome.settings-daemon.peripherals.touchpad.idle-time) to configure the amount of time the touchpad is disabled after a key is pressed.

I made these changes starting at commit bfc79ef855127547433df5d348a19640f67ebc85 (not sure if that's important or not--this is my first time doing this). I don't know what the GNOME policy is on superfluous dconf settings, but I understand if this patch isn't accepted :)
Comment 4 Andy Grover 2012-05-22 04:27:42 UTC
*** Bug 672423 has been marked as a duplicate of this bug. ***
Comment 5 Andy Grover 2012-05-22 04:31:09 UTC
Please consider Snowball's patch, this is really annoying for some of us.
Comment 6 Bastien Nocera 2012-05-23 17:20:59 UTC
(In reply to comment #5)
> Please consider Snowball's patch, this is really annoying for some of us.

You're not going to get much luck commenting or adding patches to a closed bug.

The value is now 1 second, see bug 590783.