mouse: Disable touchpad for longer

The default is 2 seconds, so when disabling the touchpad while typing
we should probably disable it for 2 seconds unless there's a very good
reason not to use that value.

https://bugzilla.gnome.org/show_bug.cgi?id=621836